<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_number" />
        <Spinner 
            android:id="@+id/player_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:prompt="@string/spinner_choose_player_number"
            />
    </LinearLayout>
    
    <!-- player name -->
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player1" />
        <EditText 
            android:id="@+id/player1_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <EditText 
            android:id="@+id/player1_start_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_start_point"
            android:digits="0123456789-"
            android:inputType="number"
            android:singleLine="true"
            android:layout_weight="1"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player2" />
        <EditText 
            android:id="@+id/player2_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <EditText 
            android:id="@+id/player2_start_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_start_point"
            android:digits="0123456789-"
            android:inputType="number"
            android:singleLine="true"
            android:layout_weight="1"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player3" />
        <EditText 
            android:id="@+id/player3_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <EditText 
            android:id="@+id/player3_start_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_start_point"
            android:digits="0123456789-"
            android:inputType="number"
            android:singleLine="true"
            android:layout_weight="1"/>
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/player4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player4" />
        <EditText 
            android:id="@+id/player4_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <EditText 
            android:id="@+id/player4_start_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_start_point"
            android:digits="0123456789-"
            android:inputType="number"
            android:singleLine="true"
            android:layout_weight="1"/>
    </LinearLayout>
    
    <include layout="@layout/zipai_zhuangjia_spinner"/>
    
    <LinearLayout 
        android:id="@+id/shangxiaxing"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shangxiaxing" />
        <CheckBox 
            android:id="@+id/shangxiaxing_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <!-- <CheckedTextView 
        android:id="@+id/shangxiaxing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shangxiaxing"/>
 -->
    <Button 
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start_game"/>
    
    <Button 
        android:id="@+id/history_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/history"/>
</LinearLayout>