<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:number="http://schemas.android.com/apk/res/com.jifenqi"
    android:id="@+id/record_round_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/huzishu" />
        <com.jifenqi.NumberPicker
            android:id="@+id/huzishu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            number:can_negative="true"
            number:base="15"
            number:step="5"
            android:digits="0123456789-"
            android:inputType="number"
            android:singleLine="true"/>
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/shangxing_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/shangxing_name"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/shangxing" />
        <com.jifenqi.NumberPicker
            android:id="@+id/shangxing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            number:can_negative="true"
            number:base="0"
            number:step="1"
            android:digits="0123456789"
            android:inputType="number"
            android:singleLine="true"/>
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/xiaxing_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/xiaxing" />
        <com.jifenqi.NumberPicker
            android:id="@+id/xiaxing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            number:can_negative="true"
            number:base="0"
            number:step="1"
            android:digits="0123456789"
            android:inputType="number"
            android:singleLine="true"/>
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/zimo_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zimo" />
        <CheckBox 
            android:id="@+id/zimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/huangzhuang_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/huangzhuang" />
        <CheckBox 
            android:id="@+id/huangzhuang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/fangpao_player_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fangpao_player" />
        <Spinner 
            android:id="@+id/fangpao_player_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</LinearLayout>