<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
            android:id="@+id/wrong_remain_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong_remain_points"
            android:textColor="@color/red"
            android:visibility="gone"
            />
    
    <!-- player name -->
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/player1_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player1" />
        <EditText 
            android:id="@+id/player1_start_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789-"
            android:inputType="number"
            android:singleLine="true"
            android:layout_weight="1"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/player2_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player2" />
        <EditText 
            android:id="@+id/player2_start_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789-"
            android:inputType="number"
            android:singleLine="true"
            android:layout_weight="1"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/player3_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player3" />
        <EditText 
            android:id="@+id/player3_start_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789-"
            android:inputType="number"
            android:singleLine="true"
            android:layout_weight="1"/>
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/player4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/player4_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player4" />
        <EditText 
            android:id="@+id/player4_start_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789-"
            android:inputType="number"
            android:singleLine="true"
            android:layout_weight="1"/>
    </LinearLayout>
    
    <include layout="@layout/zipai_zhuangjia_spinner"/>
</LinearLayout>