<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/round_detail_layout_1"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:orientation="vertical"
     >

    <LinearLayout
        android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/zhuangjia"
             />
    <TextView
            android:id="@+id/zhuangjia_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
             />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/hupai_player"
             />
    <TextView
            android:id="@+id/hupai_player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
             />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    
        <TextView
            android:id="@+id/zimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/zimo"
             />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/fangpao_player"
             />
        <TextView
            android:id="@+id/fangpao_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>